rig-montreal-lancedb/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  VPCId:
    Description: Vpc in which both EFS and Lambda will be created. Id has format "vpc-xxxxxx".
    Type: String
  PrivateSubnet1:
    Description: | 
      Id of a private subnet where the EFS mount target will be created. Id has format "subnet-xxxxxx".
      Make sure the subnet has access to the public internet, ie. Route table points 0.0.0.0/0 traffic to a NAT Gateway.
    Type: String
  PrivateSubnet2:
    Description: |
      Id of another private subnet in different AZ where the second EFS mount target will be created. Id has format "subnet-xxxxxx".
      Make sure the subnet has access to the public internet, ie. Route table points 0.0.0.0/0 traffic to a NAT Gateway.
    Type: String
  S3Bucket:
    Description: S3 bucket name where the lambda code is stored.
    Type: String
  # NOTE: Do NOT do this in production. Use AWS Secrets Manager or SSM Parameter Store instead.
  # Right now, it's passing the api key directly as env var to the lambda which is not secure.
  OpenAIApiKey:
    Description: Open AI api key.
    Type: String
  LangchainApiKey:
    Description: Langchain api key.
    Type: String
  LoaderLambdaImageUri:
    Description: Image uri (in ECR) for loader python lambda function
    Type: String
  AppLambdaImageUri:
    Description: Image uri (in ECR) for app python lambda function
    Type: String

Resources:
  FileSystem:
    Type: "AWS::EFS::FileSystem"
    Properties:
      # Change this based on your needs. Provisioned mode is often recommended for cheaper solution.
      ThroughputMode: "elastic"
      Encrypted: true

  FileSystemAccessPoint:
    Type: "AWS::EFS::AccessPoint"
    Properties:
      FileSystemId: !Ref FileSystem
      PosixUser:
        Uid: "1001"
        Gid: "1001"
      RootDirectory:
        Path: "/efs"
        CreationInfo:
          OwnerUid: "1001"
          OwnerGid: "1001"
          Permissions: "755"

  # Define subnet where EFS will live in some AZ.
  MountTarget1:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SecurityGroups: 
        - !Ref EFSSecurityGroup
      SubnetId: !Ref PrivateSubnet1

  # Define subnet where EFS will live in another AZ.
  MountTarget2:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SecurityGroups: 
        - !Ref EFSSecurityGroup
      SubnetId: !Ref PrivateSubnet2

  EFSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow EFS mount targets receive requests from lambda function."
      VpcId: !Ref VPCId 
      SecurityGroupIngress:
        # Whitelist NFS traffic from lambda function
        - IpProtocol: "tcp"
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

  ##########################################
  #       Rig lambda functions / EFS       #
  ##########################################
  LoaderLambdaFunction:
    Type: AWS::Lambda::Function
    DependsOn:
      - MountTarget1
      - MountTarget2
    Properties:
      Runtime: provided.al2023
      Handler: hello.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Timeout: 300
      Code: 
        S3Bucket: !Ref S3Bucket
        S3Key: rig/loader/bootstrap.zip
      Environment:
        Variables:
          OPENAI_API_KEY: !Ref OpenAIApiKey
      VpcConfig:
        SecurityGroupIds:
          # Whitelist NFS traffic to mount targets
          # Whitelist HTTPS traffic to the internet (calling API)
          - !Ref LambdaSecurityGroup
        SubnetIds:
          # Same subnets where EFS mount targets are created
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      FileSystemConfigs:
        - Arn: !GetAtt FileSystemAccessPoint.Arn
          LocalMountPath: "/mnt/efs"  # Path where the EFS will be mounted in the Lambda environment

  AppLambdaFunction:
    Type: AWS::Lambda::Function
    DependsOn:
      - MountTarget1
      - MountTarget2
    Properties:
      Runtime: provided.al2023
      Handler: hello.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Timeout: 300
      Code: 
        S3Bucket: !Ref S3Bucket
        S3Key: rig/app/bootstrap.zip
      Environment:
        Variables:
          OPENAI_API_KEY: !Ref OpenAIApiKey
      VpcConfig:
        SecurityGroupIds:
          # Whitelist NFS traffic to mount targets
          # Whitelist HTTPS traffic to the internet (calling API)
          - !Ref LambdaSecurityGroup
        SubnetIds:
          # Same subnets where EFS mount targets are created
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      FileSystemConfigs:
        - Arn: !GetAtt FileSystemAccessPoint.Arn
          LocalMountPath: "/mnt/efs"  # Path where the EFS will be mounted in the Lambda environment

  LambdaExecutionRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "lambda.amazonaws.com"
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: "LambdaEC2NetworkInterfacePolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: "VisualEditor0"
                Effect: "Allow"
                Action:
                  - "ec2:CreateNetworkInterface"
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:CreateTags"
                  - "ec2:DeleteNetworkInterface"
                  - "ec2:AttachNetworkInterface"
                Resource: "*"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess"
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"

  LambdaSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow lambda to make requests to EFS mount targets and to public internet."
      VpcId: !Ref VPCId 
  
  LambdaSecurityGroupEFSEgress:
    # Whitelist NFS traffic to mount targets
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: "tcp"
      FromPort: 2049
      ToPort: 2049
      DestinationSecurityGroupId: !Ref EFSSecurityGroup
      GroupId: !Ref LambdaSecurityGroup
  
  LambdaSecurityGroupInternetEgress:
    # Whitelist HTTPS traffic to the internet (calling API)
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: "tcp"
      FromPort: 443
      ToPort: 443
      CidrIp: "0.0.0.0/0"
      GroupId: !Ref LambdaSecurityGroup

  ##########################################
  #    Langchain lambda functions / EFS    #
  ##########################################
  PyLoaderLambdaFunction:
    Type: +
    DependsOn:
      - MountTarget1
      - MountTarget2
    Properties:
      Role: !GetAtt LambdaExecutionRole.Arn
      Timeout: 300
      PackageType: Image
      ImageConfig:
        Command: 
          - loader.handler
      Code: 
        ImageUri: !Ref LoaderLambdaImageUri
      Environment:
        Variables:
          OPENAI_API_KEY: !Ref OpenAIApiKey
          LANGSMITH_TRACING_V2: true
          LANGSMITH_ENDPOINT: "https://api.smith.langchain.com"
          LANGCHAIN_API_KEY: !Ref LangchainApiKey
          LANGCHAIN_PROJECT: montreaal-lancedb
      VpcConfig:
        SecurityGroupIds:
          # Whitelist NFS traffic to mount targets
          # Whitelist HTTPS traffic to the internet (calling API)
          - !Ref LambdaSecurityGroup
        SubnetIds:
          # Same subnets where EFS mount targets are created
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      FileSystemConfigs:
        - Arn: !GetAtt FileSystemAccessPoint.Arn
          LocalMountPath: "/mnt/efs"  # Path where the EFS will be mounted in the Lambda environment

  PyAppLambdaFunction:
    Type: AWS::Lambda::Function
    DependsOn:
      - MountTarget1
      - MountTarget2
    Properties:
      Role: !GetAtt LambdaExecutionRole.Arn
      Timeout: 120
      PackageType: Image
      Code: 
        ImageUri: !Ref AppLambdaImageUri
      Environment:
        Variables:
          OPENAI_API_KEY: !Ref OpenAIApiKey
          LANGSMITH_TRACING_V2: true
          LANGSMITH_ENDPOINT: "https://api.smith.langchain.com"
          LANGCHAIN_API_KEY: !Ref LangchainApiKey
          LANGCHAIN_PROJECT: montreaal-lancedb
      VpcConfig:
        SecurityGroupIds:
          # Whitelist NFS traffic to mount targets
          # Whitelist HTTPS traffic to the internet (calling API)
          - !Ref LambdaSecurityGroup
        SubnetIds:
          # Same subnets where EFS mount targets are created
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      FileSystemConfigs:
        - Arn: !GetAtt FileSystemAccessPoint.Arn
          LocalMountPath: "/mnt/efs"  # Path where the EFS will be mounted in the Lambda environment
